--- a/example_usage.ipynb
+++ b/example_usage.ipynb
@@ -1,1 +1,77 @@
-{"nbformat":4,"nbformat_minor":0,"metadata":{"colab":{"name":"Untitled2.ipynb","provenance":[],"collapsed_sections":[],"authorship_tag":"ABX9TyPMP1schP/0FAoqn5t2923l"},"kernelspec":{"name":"python3","display_name":"Python 3"},"language_info":{"name":"python"}},"cells":[{"cell_type":"code","execution_count":1,"metadata":{"colab":{"base_uri":"https://localhost:8080/","height":35},"id":"AwvLZ_9ZqYE3","executionInfo":{"status":"ok","timestamp":1641963695121,"user_tz":360,"elapsed":4,"user":{"displayName":"Osama Masoud","photoUrl":"https://lh3.googleusercontent.com/a/default-user=s64","userId":"07781423427912880887"}},"outputId":"eb99a34c-93f7-45dc-b153-ac66147516b6"},"outputs":[{"output_type":"execute_result","data":{"application/vnd.google.colaboratory.intrinsic+json":{"type":"string"},"text/plain":["'/content'"]},"metadata":{},"execution_count":1}],"source":["%pwd"]},{"cell_type":"code","source":["!pip install zarr\n","!pip install py-cpuinfo\n","!pip install ipympl\n","%matplotlib widget"],"metadata":{"id":"nbK8-kbmqZs9"},"execution_count":null,"outputs":[]}]}
+{
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "name": "Untitled2.ipynb",
+      "provenance": [],
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyPIz2TAN6uapQzWWFXVXLWl",
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/omasoud/np-array-io-bench/blob/main/example_usage.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "AwvLZ_9ZqYE3",
+        "outputId": "eb99a34c-93f7-45dc-b153-ac66147516b6"
+      },
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'/content'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ],
+      "source": [
+        "%pwd"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "%%time\n",
+        "!pip install zarr\n",
+        "!pip install py-cpuinfo\n",
+        "!pip install ipympl\n",
+        "%matplotlib widget"
+      ],
+      "metadata": {
+        "id": "nbK8-kbmqZs9"
+      },
+      "execution_count": null,
+      "outputs": []
+    }
+  ]
+}
