--- a/example_usage.ipynb
+++ b/example_usage.ipynb
@@ -6,7 +6,7 @@
       "name": "Untitled2.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOO7zx1QqME8SKAwlqqi+kM",
+      "authorship_tag": "ABX9TyNW2PSHRmh2Se7qoXw3cLZc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,8 +31,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!git clone https://github.com/omasoud/np-array-io-bench.git\n",
-        "%cd np-array-io-bench"
+        "!git clone https://github.com/omasoud/np-array-io-bench.git"
       ],
       "metadata": {
         "id": "kDtg_Y9S4cJM"
@@ -43,7 +42,9 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install -r requirements.txt > /dev/null"
+        "# If this gives an error, restart the runtime then continue from the next cell\n",
+        "%cd /content/np-array-io-bench/\n",
+        "%pip install -r requirements.txt > /dev/null"
       ],
       "metadata": {
         "id": "5ELzSYzBchFB"
@@ -54,17 +55,7 @@
     {
       "cell_type": "code",
       "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "xxgn8J4acjTZ"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "%cd /content/np-array-io-bench/\n",
         "# run benchmark\n",
         "%run npabench.py --max-size 1mb --notebook"
       ],
@@ -92,18 +83,7 @@
         ""
       ],
       "metadata": {
-        "id": "S7GrV57KdJyc"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "C8tJdFWbdfcV"
+        "id": "vslT0sm9Z37h"
       },
       "execution_count": null,
       "outputs": []
